--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.3.2",
         "file-saver": "^2.0.5",
-        "firebase": "^10.7.1",
+        "firebase": "^10.14.1",
         "react": "^18.2.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-bootstrap": "^2.9.1",
         "react-datepicker": "^4.24.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
+        "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4",
         "xlsx": "^0.18.5"
