--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
     "private": true,
     "homepage": "https://kevinsuu.github.io/RecordSysten",
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^7.0.2",
+        "@mui/material": "^7.0.2",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -18,6 +22,7 @@
         "react-icons": "^4.12.0",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "react-toastify": "^11.0.5",
         "web-vitals": "^2.1.4",
         "xlsx": "^0.18.5"
     },
