feat: 更新 Firebase 配置為環境變數，修改相關功能名稱為服務項目，並新增樣式檔案

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,9 @@
 REACT_APP_LOGIN_ACCOUNT1=sjs47311@gmail.com
 REACT_APP_LOGIN_ACCOUNT2=ccss620917@gmail.com
+REACT_APP_FIREBASE_API_KEY=AIzaSyBTb79ZPmqRc8s7LU1-zuRA0rUIKmTAISM
+REACT_APP_FIREBASE_AUTH_DOMAIN=record-system-aa15c.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://record-system-aa15c-default-rtdb.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=record-system-aa15c
+REACT_APP_FIREBASE_STORAGE_BUCKET=record-system-aa15c.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=893443841090
+REACT_APP_FIREBASE_APP_ID=1:893443841090:web:0071e69066573e6faa61db
